# proto2db

./: .gitignore  CMakeLists.txt  README.md  init.sh  main.cpp  proto_c_mapper.hpp  proto_db_convertor.hpp  protobuild.cmake
proto/: person.proto  persons.proto
